Fixed the cropped project description on mobile

--- a/src/components/Content/Projects/Project.scss
+++ b/src/components/Content/Projects/Project.scss
@@ -74,4 +74,9 @@
             float: left;
         }
     }
+    @media (max-width: $breakPointTablet) {
+        .projectTechnologiesContainer {
+            position: relative;
+        }
+    }
 }
